# github-issue-pr-agent

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: README  env.py
alembic/versions/: 0001_initial_schema.py
demo_repo/: calculator.py  conftest.py  test_calculator.py
docs/: EXECUTION_PLAN.md  architecture.md  design-decisions.md  failure-modes.md  implementation_plan.md  roadmap.md  security.md
examples/: run_demo.py
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
frontend/e2e/: smoke.spec.ts
frontend/src/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/components/: ApprovalGate.tsx  AuditTimeline.tsx  CodeDiff.tsx  DemoBadge.tsx  EmptyState.tsx  ErrorBoundary.tsx  ErrorState.tsx  LoadingSkeleton.tsx  NavBar.tsx  PipelineTimeline.tsx  PlanView.tsx  RunStatsChart.tsx  SafetyPanel.tsx  StatusBadge.tsx  TestResult.tsx
frontend/src/lib/: api.ts  format.ts  mockData.ts  pipeline.ts  safety.ts
frontend/src/types/: index.ts
src/issue_pr_agent/: __init__.py  agent.py  audit.py  config.py  db.py  editor.py  git_ops.py  github.py  main.py  models.py  planner.py  sandbox.py  store.py  test_runner.py  worker.py
tests/: conftest.py  test_agent.py  test_api.py  test_core.py  test_db.py  test_editor.py  test_git_ops.py  test_github.py  test_planner.py  test_sandbox.py  test_store.py  test_test_runner.py  test_worker.py
(+14 files in other folders)
