[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "github-issue-pr-agent"
version = "1.0.0"
description = "Autonomous agent that reads GitHub issues, generates implementation plans via LLM, edits code safely, runs tests, and opens draft PRs"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "loguru>=0.7.0",
    "sqlalchemy>=2.0.0",
    "redis>=5.0.0",
    "celery>=5.3.0",
    "httpx>=0.24.0",
    "alembic>=1.13.0",
    "pyyaml>=6.0.0",
    "gitpython>=3.1.0",
    "PyGithub>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "aiosqlite>=0.19.0",
    "ruff>=0.1.0",
    "pyright>=1.1.0"
]

[tool.setuptools.packages.find]
where = ["src"]
